Add missing files. Updated Norwegian bokmål translation.
2008-07-09  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Add missing files.
	* nb.po: Updated Norwegian bokmål translation.

svn path=/trunk/; revision=14330

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-09  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.in: Add missing files.
+	* nb.po: Updated Norwegian bokmål translation.
+
 2008-07-04  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
