Actually add it.
2008-07-09  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-window-slot-info.h:
	Actually add it.

	* src/nautilus-navigation-window-slot.h:
	* src/nautilus-notebook.h:
	* src/nautilus-window-slot.h:
	Contents was added twice. Remove it once.

svn path=/trunk/; revision=14331

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-07-09  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-window-slot-info.h:
+	Actually add it.
+
+	* src/nautilus-navigation-window-slot.h:
+	* src/nautilus-notebook.h:
+	* src/nautilus-window-slot.h:
+	Contents was added twice. Remove it once.
+
 2008-07-08  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/*.c:
