Fix typo. Go forward instead of going back.
2008-07-09  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window-menus.c (action_forward_callback):
	Fix typo. Go forward instead of going back.

svn path=/trunk/; revision=14333

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-09  Christian Neumair  <cneumair@gnome.org>
 
+	* src/nautilus-navigation-window-menus.c (action_forward_callback):
+	Fix typo. Go forward instead of going back.
+
+2008-07-09  Christian Neumair  <cneumair@gnome.org>
+
 	* src/nautilus-places-sidebar.c (compute_drop_position),
 	(drag_motion_callback), (reorder_bookmarks),
 	(drag_data_received_callback), (nautilus_places_sidebar_init):
