Do not bind CTRL+T to "Move to Trash".
2008-07-10  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-directory-view.c:
	Do not bind CTRL+T to "Move to Trash".

svn path=/trunk/; revision=14334

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-10  Christian Neumair  <cneumair@gnome.org>
+
+	* src/file-manager/fm-directory-view.c:
+	Do not bind CTRL+T to "Move to Trash".
+
 2008-07-09  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-navigation-window-menus.c (action_forward_callback):
