Translation updated by Máté Őry.
2008-07-10  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated by Máté Őry.

svn path=/trunk/; revision=14338

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-10  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated by Máté Őry.
+
 2008-07-10  Matej Urbančič  <mateju@svn.gnome.org>
 
 	* sl.po: Updated Slovenian Translation.
