--- a/po/hu.po
+++ b/po/hu.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-07-09 09:31+0000\n"
-"PO-Revision-Date: 2008-07-10 21:43+0200\n"
+"PO-Revision-Date: 2008-07-10 22:03+0200\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@fsf.hu>\n"
 "MIME-Version: 1.0\n"
@@ -1537,7 +1537,7 @@ msgstr "_Újra"
 
 #: ../libnautilus-private/nautilus-file-operations.c:173
 msgid "Delete _All"
-msgstr "Összes _törlése"
+msgstr "Öss_zes törlése"
 
 #: ../libnautilus-private/nautilus-file-operations.c:174
 msgid "_Replace"
