Updated French translation by Bruno Brouard and Claude Paroz.
2008-07-12  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation by Bruno Brouard and Claude Paroz.

svn path=/trunk/; revision=14341

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-12  Claude Paroz  <claude@2xlibre.net>
+
+	* fr.po: Updated French translation by Bruno Brouard and Claude Paroz.
+
 2008-07-10  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated by Máté Őry.
