--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-07-12  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-container.c
+	(handle_icon_button_press):
+	Fix activation of previously selected icons (introduced when fixing
+	bug #347423). Fixes #542269. Thanks to Tomasz Sałaciński.
+
 2008-07-10  Christian Neumair  <cneumair@gnome.org>
 
 	* src/file-manager/fm-directory-view.c:
