Update for release.
2008-07-12  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

svn path=/branches/gnome-2-22/; revision=14344

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Major changes in 2.22.5 are:
+* Fix double-click activation in icon view.
+
 Major changes in 2.22.4 are:
 * Properly display submenus that are provided by extensions
 * Preserve mtime when copying files
