--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-12  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-07-12  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c
 	(handle_icon_button_press):
 	Fix activation of previously selected icons (introduced when fixing
