--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Major changes in 2.22.5.1 are:
+* Fix double-click activation in icon view without any side effects.
+
 Major changes in 2.22.5 are:
 * Fix double-click activation in icon view.
 
