--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-12  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2008-07-12  Claude Paroz  <claude@2xlibre.net>
 
 	* fr.po: Updated French translation by Bruno Brouard and Claude Paroz.
