--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-07-12  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-icon-container.c
+	(handle_icon_double_click):
+	Fix typo.
+
+2008-07-12  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-properties-window.c (create_basic_page),
 	(create_simple_permissions), (create_advanced_permissions),
 	(create_permissions_page):
