Display emblems for small icon sizes, down to 16 pixels.
2008-07-15  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-icon-info.c
	(nautilus_icon_get_emblem_size_for_icon_size):
	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
	Display emblems for small icon sizes, down to 16 pixels.

svn path=/trunk/; revision=14361

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-07-15  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-info.c
+	(nautilus_icon_get_emblem_size_for_icon_size):
+	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
+	Display emblems for small icon sizes, down to 16 pixels.
+
 2008-07-14  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-emblem-utils.c
